kube/media/seerr/seerr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media
  labels:
    app.kubernetes.io/name: seerr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: seerr
  template:
    metadata:
      annotations:
        diun.enable: "true"
      labels:
        app.kubernetes.io/name: seerr
    spec:
      terminationGracePeriodSeconds: 15

      # seerr runs as node (uid 1000); fsGroup ensures the iSCSI volume is group-writable
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      volumes:
      - name: seerr-config
        persistentVolumeClaim:
          claimName: seerr-config
      containers:
      - env:
        - name: TZ
          value: America/New_York

        # https://github.com/seerr-team/seerr/pkgs/container/seerr
        image: ghcr.io/seerr-team/seerr:v3.3.0
        imagePullPolicy: IfNotPresent
        name: seerr
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 512Mi
        ports:
        - containerPort: 5055
          name: http
          protocol: TCP
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /app/config
          name: seerr-config
