kube/media/seerr/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: seerr-lan
  namespace: media
  annotations:
    metallb.io/loadBalancerIPs: "192.168.1.232"
  labels:
    app.kubernetes.io/name: seerr
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: seerr
  ports:
  - name: http
    port: 5055
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media
  labels:
    app.kubernetes.io/name: seerr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: seerr
  ports:
  - name: http
    port: 5055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-connections: "5"
  labels:
    app.kubernetes.io/name: seerr
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - seerr.matthew-stratton.me
    secretName: seerr-tls
  rules:
  - host: seerr.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: seerr
            port:
              number: 5055
        path: /
        pathType: Prefix
